--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Preeti Prajapati</h1>
-    <img src="./profile_image.jpeg" height="150px" alt="Profile photo"/>
+    <img src="./Profile_image.jpeg" height="150px" alt="Profile photo"/>
     <hr/>
     <h2>Summary</h2>
     <p>
