--- a/My_hobbies.html
+++ b/My_hobbies.html
@@ -10,7 +10,7 @@
     <ol>
         <li>Reading</li>
         <li>Cooking</li>
-        <li>Watching Seres/Movies</li>
+        <li>Watching Series/Movies</li>
     </ol>
     <hr/>
 </body>
