--- a/Contact_me.html
+++ b/Contact_me.html
@@ -9,7 +9,7 @@
     <h2>Contact Me</h2>
         Somani Residency, Koyte wasti,Punawale,Pune-411033<br/>
         +91 7620639344<br/>
-        preetiprajapat0181@gmail.company<br/>
+        preetiprajapat0181@gmail.com<br/>
     <hr/>
 </body>
 </html>
