--- a/Contact_me.html
+++ b/Contact_me.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h2>Contact Me</h2>
-        Somani Residency, Koyte wasti,Punawale,Pune-411033<br/>
-        +91 7620639344<br/>
-        preetiprajapat0181@gmail.com<br/>
+        <p>Somani Residency, Koyte wasti,Punawale,Pune-411033</p>
+        <p>+91 7620639344</p>
+        <p>preetiprajapat0181@gmail.com</p>
     <hr/>
 </body>
 </html>
