--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
     <h2>Other</h2>
     <a href="./My_hobbies.html">My Hobbies</a><br/>
     <a href="./Contact_me.html">Contact me</a>
+    <footer>
+        <p>© Preeti Prajapati.All rights reserved.</p>
+    </footer>
 </body>
 </html>
